BLT-5: added remote to blt.

--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -23,7 +23,7 @@ project:
 # Configuration settings for new git repository.
 git:
   default_branch: master
-  remotes: {  }
+  remotes: { git@github.com:Pooja04/my-project.git }
 deploy:
   # When manually deploying a tag, also tag the source repository.
   tag_source: true
