BLT-6: added remote to blt.

--- a/blt/blt.yml
+++ b/blt/blt.yml
@@ -23,7 +23,8 @@ project:
 # Configuration settings for new git repository.
 git:
   default_branch: master
-  remotes: { git@github.com:Pooja04/my-project.git }
+  remotes:
+    - git@github.com:Pooja04/my-project.git
 deploy:
   # When manually deploying a tag, also tag the source repository.
   tag_source: true
