--- a/config/default/lightning_core.versions.yml
+++ b/config/default/lightning_core.versions.yml
@@ -1,4 +1,5 @@
 acquia_connector: 1.22.0
+action: 8.9.2
 autosave_form: 1.1.0
 bg_image_formatter: 1.14.0
 blazy: 2.1.0
@@ -98,6 +99,7 @@ search_api: 1.17.0
 search_api_db: 1.17.0
 seckit: 1.2.0
 serialization: 8.9.2
+shield: 1.4.0
 shortcut: 8.9.2
 simple_gmap: 3.0.0
 simple_oauth: 4.5.0
